maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: '}' expected but 'case' found.
         case 2 =>{left(); if (!isFacingWall()) {forward()}}}}
         ^RandomMouseMaze:13: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:20: error: eof expected but '}' found.
}
^